# OfficeHours

./: .env.example  PROJECT_CONTEXT.md  README.md  demo.py  nixpacks.toml  package-lock.json  pyproject.toml  run.py
.claude/: settings.json
app/: agent_runtime.py  config.py  database.py  db_models.py  llm_client.py  main.py  models.py  negotiation.py  scraper.py  seed.py
app/agents/: fit.py  mediator_agent.py  professor_agent.py  student_agent.py
docs/: HACKATHON_NOTES.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/start/: page.tsx
frontend/src/components/dashboard/: ProfessorDashboard.tsx  StudentDashboard.tsx  WhyThisMatchModal.tsx
frontend/src/components/discovery/: SignalDiscoveryExperience.tsx
frontend/src/components/layout/: AppSidebar.tsx
frontend/src/components/onboarding/: DemoAnalysisLoader.tsx  DemoFlowShell.tsx  InvestigationProvenance.tsx  LightweightIntakeForm.tsx  NoteWithProvenance.tsx  OnboardingShell.tsx  RolePicker.tsx  SignalAnalysisLoader.tsx
frontend/src/components/shared-note/: SharedNoteView.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  ChipSelect.tsx  Input.tsx  ProgressBar.tsx  RadioGroup.tsx  UniversitySearch.tsx
frontend/src/lib/: constants.ts  env.ts  profileUtils.ts  universities.ts  validation.ts
frontend/src/lib/matching/: runMatching.ts
frontend/src/lib/onboarding/: lightweight.ts  session.ts  types.ts
frontend/supabase/: negotiations.sql  schema.sql
scripts/: checkpoint-frontend.sh
(+20 files in other folders)
